project(ug3 C)

set(UG3_HDRS
UG3_Grid_BC_Def.h
UG3_Grid_BC_Macro.h
UG3_LIB.h
ug3_angmax.h
ug3_angmax2.h
ug3_angmaxb.h
ug3_bfv.h
ug3_bnd_nodes.h
ug3_bnd_vol_nodes.h
ug3_bsmth.h
ug3_bv.h
ug3_bv2.h
ug3_bvbcf.h
ug3_bvls.h
ug3_chk.h
ug3_chkb.h
ug3_chkbc.h
ug3_chkbcf.h
ug3_chkbcp1.h
ug3_chkbcp2.h
ug3_chkbda.h
ug3_chkblis.h
ug3_chkblisbc.h
ug3_chkbn.h
ug3_chkbq.h
ug3_chkbsurf.h
ug3_chkplane.h
ug3_chkq.h
ug3_chkvol.h
ug3_chkvolm.h
ug3_disoel.h
ug3_dv.h
ug3_dx.h
ug3_error_message.h
ug3_extract_surf.h
ug3_face_sort.h
ug3_file_format.h
ug3_ibfe.h
ug3_ibfibf.h
ug3_ibfibf0.h
ug3_ibfin.h
ug3_iblisibf.h
ug3_ibnin.h
ug3_iboibf.h
ug3_ibor.h
ug3_idibf.h
ug3_idiel.h
ug3_idielm.h
ug3_idsmth.h
ug3_ielibf.h
ug3_ielibf0.h
ug3_ielibf2.h
ug3_ielibfm.h
ug3_ieliel.h
ug3_ieliel2.h
ug3_ieliel2b.h
ug3_ieliel3b.h
ug3_ielin.h
ug3_ielinm.h
ug3_ieljel.h
ug3_inix.h
ug3_injn.h
ug3_interp.h
ug3_iobjiel.h
ug3_irfibf.h
ug3_irfibfm.h
ug3_iviel.h
ug3_lrmin.h
ug3_mbcf.h
ug3_mdisn.h
ug3_nelpnmax.h
ug3_nnodeb.h
ug3_nnodeb2.h
ug3_nstv.h
ug3_octree.h
ug3_qtria.h
ug3_qtria_pyramid_check.h
ug3_qtria_pyramid_create.h
ug3_qtria_pyramid_reset.h
ug3_read_surf_grid_file.h
ug3_read_ufunc_func_file.h
ug3_read_ugrid_grid_file.h
ug3_reorder0.h
ug3_reorder0bf.h
ug3_reorder0bn.h
ug3_reorder0n.h
ug3_reorderb.h
ug3_reorderid.h
ug3_reordern.h
ug3_rmtbf.h
ug3_rmtbfd.h
ug3_set_irfibf.h
ug3_setbcp.h
ug3_sgins.h
ug3_sign.h
ug3_sliver_info.h
ug3_srch.h
ug3_srchbf.h
ug3_subgrid.h
ug3_surf_error_message.h
ug3_tbfd.h
ug3_tbfd0.h
ug3_tvol.h
ug3_version.h
ug3_vol.h
ug3_volm.h
ug3_volr.h
ug3_vsmth.h
ug3_write_surf_grid_error_file.h
ug3_write_surf_grid_file.h
ug3_write_ufunc_func_file.h
ug3_write_ugrid_grid_file.h
ug3_write_ugrid_grid_file2.h
ug3_write_vnode_node_file.h
ug3_x2x3.h
ug3_xmax.h
)

set(UG3_SRCS
ug3_chkbsurf.c
ug3_error_message.c
ug3_file_format.c
ug3_ieliel2.c
ug3_ieliel2b.c
ug3_ieliel3b.c
ug3_version.c
)

set(UG3_SRCS_2
ug3_angmax.c
ug3_angmax2.c
ug3_angmaxb.c
ug3_bfv.c
ug3_bnd_nodes.c
ug3_bnd_vol_nodes.c
ug3_bsmth.c
ug3_bv.c
ug3_bv2.c
ug3_bvbcf.c
ug3_bvls.c
ug3_chk.c
ug3_chkb.c
ug3_chkbc.c
ug3_chkbcf.c
ug3_chkbcp1.c
ug3_chkbcp2.c
ug3_chkbda.c
ug3_chkblis.c
ug3_chkblisbc.c
ug3_chkbn.c
ug3_chkbq.c
ug3_chkplane.c
ug3_chkq.c
ug3_chkvol.c
ug3_chkvolm.c
ug3_disoel.c
ug3_dv.c
ug3_dx.c
ug3_extract_surf.c
ug3_face_sort.c
ug3_ibfe.c
ug3_ibfibf.c
ug3_ibfibf0.c
ug3_ibfin.c
ug3_iblisibf.c
ug3_ibnin.c
ug3_iboibf.c
ug3_ibor.c
ug3_idibf.c
ug3_idiel.c
ug3_idielm.c
ug3_idsmth.c
ug3_ielibf.c
ug3_ielibf0.c
ug3_ielibf2.c
ug3_ielibfm.c
ug3_ieliel.c
ug3_ielin.c
ug3_ielinm.c
ug3_ieljel.c
ug3_inix.c
ug3_injn.c
ug3_interp.c
ug3_iobjiel.c
ug3_irfibf.c
ug3_irfibfm.c
ug3_iviel.c
ug3_lrmin.c
ug3_mbcf.c
ug3_mdisn.c
ug3_nelpnmax.c
ug3_nnodeb.c
ug3_nnodeb2.c
ug3_nstv.c
ug3_octree.c
ug3_qtria.c
ug3_qtria_pyramid_create.c
ug3_qtria_pyramid_check.c
ug3_qtria_pyramid_reset.c
ug3_read_surf_grid_file.c
ug3_read_ufunc_func_file.c
ug3_read_ugrid_grid_file.c
ug3_reorder0.c
ug3_reorder0bf.c
ug3_reorder0bn.c
ug3_reorder0n.c
ug3_reorderb.c
ug3_reorderid.c
ug3_reordern.c
ug3_rmtbf.c
ug3_rmtbfd.c
ug3_set_irfibf.c
ug3_setbcp.c
ug3_sgins.c
ug3_sign.c
ug3_sliver_info.c
ug3_srch.c
ug3_srchbf.c
ug3_subgrid.c
ug3_surf_error_message.c
ug3_tbfd.c
ug3_tbfd0.c
ug3_tvol.c
ug3_vol.c
ug3_volm.c
ug3_volr.c
ug3_vsmth.c
ug3_write_surf_grid_error_file.c
ug3_write_surf_grid_file.c
ug3_write_ufunc_func_file.c
ug3_write_ugrid_grid_file.c
ug3_write_ugrid_grid_file2.c
ug3_write_vnode_node_file.c
ug3_x2x3.c
ug3_xmax.c
)

add_library(ug3 STATIC ${UG3_SRCS} ${UG3_HDRS} ${UG3_SRCS_2})

if(CMAKE_COMPILER_IS_GNUCC)
  set_target_properties(ug3 PROPERTIES COMPILE_FLAGS -fPIC)
endif(CMAKE_COMPILER_IS_GNUCC)

set_source_files_properties(${UG3_SRCS} PROPERTIES COMPILE_FLAGS -O0)


#-------------------------------------
if(AFLR_ADD_INSTALL)
  install(TARGETS ug3 EXPORT AFLR
      ARCHIVE DESTINATION ${AFLR_TARGET_BASE}lib
      COMPONENT Development)

  install(FILES
      ${UG3_SRCS}
      ${UG3_HDRS}
      ${UG3_SRCS_2}
      CMakeLists.txt
      ug3.info
      Release_Notes_ug3.txt
      UG3_LIB.txt
      UNRESTRICTED_LICENSE.pdf
      DESTINATION src/ug3
      COMPONENT Development)
endif(AFLR_ADD_INSTALL)

